tests/expect/codefile-short-opcode.err
Error: 'tests/codefile-short-opcode.ibcm:2:4' Invalid opcode hexadecimal

    abc
       ^
